syntax = "proto3";

option go_package = "github.com/naufal-dean/ccb/protobuf";

package protobuf;

import "google/protobuf/empty.proto";

message RequestInput {
    string method = 1;
    string url = 2;
    map<string, string> header = 3;
    bytes body = 4;
}

message GetInput {
    string url = 1;
    map<string, string> header = 2;
}

message PostInput {
    string url = 1;
    map<string, string> header = 2;
    bytes body = 3;
}

message PutInput {
    string url = 1;
    map<string, string> header = 2;
    bytes body = 3;
}

message DeleteInput {
    string url = 1;
    map<string, string> header = 2;
}

message Response {
    string status = 1;
    int32 status_code = 2;
    string proto = 3;
    int32 proto_major = 4;
    int32 proto_minor = 5;
    map<string, string> header = 6;
    bytes body = 7;
    int64 content_length = 8;
}

service Http {
    rpc Request(RequestInput) returns (Response) {}
    rpc Get(GetInput) returns (Response) {}
    rpc Post(PostInput) returns (Response) {}
    rpc Put(PutInput) returns (Response) {}
    rpc Delete(DeleteInput) returns (Response) {}
}

message ServiceEndpoints {
    string service = 1;
    repeated string endpoints = 2;
}

service Listener {
    rpc OpenCircuits(ServiceEndpoints) returns (google.protobuf.Empty) {}
    rpc CloseCircuits(ServiceEndpoints) returns (google.protobuf.Empty) {}
}
